--- a/src/main/java/com/smy/gutenberggui/view/BookViewJframe.form
+++ b/src/main/java/com/smy/gutenberggui/view/BookViewJframe.form
@@ -84,7 +84,7 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                  <Color blue="bb" green="bb" red="bb" type="rgb"/>
                 </Property>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
