implemented my book feature and fixed scrollbar position bug

--- a/src/main/java/com/smy/gutenberggui/view/MainFrame.form
+++ b/src/main/java/com/smy/gutenberggui/view/MainFrame.form
@@ -81,6 +81,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Kitaplar&#x131;m"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="kitaplarimButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="cikisYapButton">
           <Properties>
