implemented logout feature

--- a/src/main/java/com/smy/gutenberggui/view/MainFrame.form
+++ b/src/main/java/com/smy/gutenberggui/view/MainFrame.form
@@ -89,6 +89,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="&#xc7;&#x131;k&#x131;&#x15f; Yap"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cikisYapButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
