translated to english

--- a/src/main/java/com/smy/gutenberggui/view/BookReadJframe.form
+++ b/src/main/java/com/smy/gutenberggui/view/BookReadJframe.form
@@ -84,7 +84,7 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="geriButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Geri"/>
+            <Property name="text" type="java.lang.String" value="Back"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="geriButtonActionPerformed"/>
