--- a/src/main/java/com/smy/gutenberggui/view/BookSearchJpanel.form
+++ b/src/main/java/com/smy/gutenberggui/view/BookSearchJpanel.form
@@ -74,15 +74,15 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Kitap Ara:"/>
+        <Property name="text" type="java.lang.String" value="Search Book:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="kitapAramaComboBox">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
-            <StringItem index="0" value="Kitap Ad&#x131;"/>
-            <StringItem index="1" value="Yazar"/>
+            <StringItem index="0" value="Title"/>
+            <StringItem index="1" value="Author"/>
           </StringArray>
         </Property>
       </Properties>
@@ -95,7 +95,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="kitapAraButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ara"/>
+        <Property name="text" type="java.lang.String" value="Search"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="kitapAraButtonActionPerformed"/>
